Commit attempt